Fix layout on small screens

--- a/css/style.scss
+++ b/css/style.scss
@@ -233,9 +233,9 @@ strong {
     p { margin: 0.8em 0 }
   }
 
-  @media (min-height: 560px) and (min-width: 360px) {
+  @media (min-width: 360px) and (min-height: 500px) {
     & {
-      height: 100%;
+      height: 100vh;
       display: flex;
     }
 
@@ -265,7 +265,8 @@ strong {
     }
   }
 
-  @media (min-width: 400px) and (min-height: 760px) { .intro-cover { flex: 2 } }
+  @media (min-width: 360px) and (min-height: 760px) { .intro-cover { flex: 2 } }
+  @media (min-width: 360px) and (max-height: 620px) { .intro-cover { flex: 1 } }
   @media (min-width: 650px) { .intro-cover-title { font-size: 2.5em } }
   @media (min-width: 900px) { .intro-cover-title { font-size: 3em } }
 }
